// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Track to match snapshot 1`] = `
<div
  class="range-slider__track"
>
  <div
    class="range-slider__track__progress"
    style="left: 25%; right: 75%; background-color: rgb(133, 133, 133);"
  />
  <div
    class="range-slider__track__progress"
    style="left: 25%; right: 75%; background-color: rgb(133, 133, 133);"
  />
</div>
`;

exports[`TrackProgress to match snapshot 1`] = `
<div
  class="range-slider__track__progress"
  style="left: 25%; right: 75%; background-color: rgb(133, 133, 133);"
/>
`;
